// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation configuration default stack configuration is ok 1`] = `
Object {
  "headerLeft": <withTheme(HeaderLeftComponent)
    icon="arrow-left"
    onPress={[Function]}
    testID="go-back"
  />,
  "headerStyle": Object {
    "backgroundColor": "#121212",
    "borderBottomWidth": 0,
    "elevation": 0,
  },
  "headerTitleStyle": Object {
    "color": "#E0E0E0",
    "flex": 1,
    "fontSize": 22,
    "fontWeight": "bold",
    "letterSpacing": 0.69,
    "lineHeight": 28,
    "textAlign": "center",
  },
}
`;

exports[`Navigation configuration default stack configuration should not display back button if there is nowhere to go back to 1`] = `
Object {
  "headerLeft": false,
  "headerStyle": Object {
    "backgroundColor": "#121212",
    "borderBottomWidth": 0,
    "elevation": 0,
  },
  "headerTitleStyle": Object {
    "color": "#E0E0E0",
    "flex": 1,
    "fontSize": 22,
    "fontWeight": "bold",
    "letterSpacing": 0.69,
    "lineHeight": 28,
    "textAlign": "center",
  },
}
`;
